--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "description": "Image lazy loading plugin for AngularJS",
   "repository": {
     "type": "git",
-    "url": "git@gitlab.corporate.ge.com:asgard/sigiljs.git"
+    "url": "https://github.com/GeneralElectric/winchjs"
   },
   "dependencies": {},
   "devDependencies": {
