--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "sigiljs",
+  "name": "winchjs",
   "version": "1.1.0",
   "authors": [
     "Sean Cady <sean.cady@ge.com>"
@@ -10,8 +10,8 @@
     "lazy",
     "load"
   ],
-  "license": "Proprietary",
-  "private": true,
+  "license": "MIT",
+  "private": false,
   "ignore": [
     "**/.*",
     "node_modules",
