--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,6 @@
     "load"
   ],
   "license": "MIT",
-  "private": false,
   "ignore": [
     "**/.*",
     "node_modules",
@@ -22,5 +21,6 @@
   "dependencies": {
     "angular": ">=1.0.0 <1.5",
     "angular-mocks": "~1.3.15"
-  }
+  },
+  "homepage": "https://github.com/GeneralElectric/winchjs"
 }
