--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
   - 0.12
 before_script:
   - npm install -g bower
+  - npm install -g codeclimate-test-reporter
   - bower install
 script:
   - npm run travis
