--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chai-spies": "^0.5.1",
     "grunt": "0.4.x",
     "grunt-contrib-connect": "0.7.x",
+    "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-jscs": "^1.6.0",
     "karma": "^0.12.31",
