--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "example"
   ],
   "dependencies": {
     "angular": ">=1.0.0 <1.5",
