--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chai": "^2.2.0",
     "chai-spies": "^0.5.1",
     "grunt": "0.4.x",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "0.7.x",
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.1",
